--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="View Syllabus"/>
-
+    <Button
+        android:id="@+id/btnCGW"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Course Guide W"/>
+    <Button
+        android:id="@+id/btnCGX"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Course Guide X"/>
+    <Button
+        android:id="@+id/btnCGY"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Course Guide Y"/>
+    <Button
+        android:id="@+id/btnCGZ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Course Guide Z"/>
 </LinearLayout>
