--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome to Mr. Zamora's HL Lang Lit Class!"
-        android:textSize="24sp"
+        android:textSize="30sp"
+        android:layout_marginTop="120dp"
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"/>
 
